src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/LastNameInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class LastNameInvalidException extends RuntimeException {
    public LastNameInvalidException(String message) {
        super(message);
    }
}
